apps/cdn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images
  namespace: images

spec:
  replicas: 2

  selector:
    matchLabels:
      app: images

  template:
    metadata:
      labels:
        app: images

    spec:
      containers:
      - name: nginx
        image: nginx:1.29-alpine

        ports:
        - containerPort: 80

        volumeMounts:
        - name: images
          mountPath: /images
          readOnly: true

        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf

        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi

      volumes:
      - name: images
        persistentVolumeClaim:
          claimName: images

      - name: nginx-config
        configMap:
          name: nginx-config
