apps/cdn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: images
  namespace: images

spec:
  selector:
    app: images

  ports:
  - port: 80
    targetPort: 80
